tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/legacy-thread-local-declaration.wyst
module legacy_thread_local_declaration

thread_local value: u64
